# music2music_code_mcp

./: Readme.md  app.py  deep-research-mcp.md  mcp_infer.py  pyproject.toml  user-manual.md
.task/: acceptance.md  plan.md  runbook.md
api/: __init__.py  arranger.py
